# i18n-checker

./: .gitignore  Cargo.toml  README.md
config/: test.toml
src/: diff.rs  export.rs  lib.rs  main.rs  settings.rs
tests/resources/diff/02/: en.json  ja.json
tests/resources/diff/03/: en.json  ja.json
tests/resources/export/01/: en.json
